codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_shows_empty_limits_message.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭─────────────────────────────────────────────────────────────────╮
│  >_ OpenAI Codex (v0.0.0)                                       │
│                                                                 │
│  Model:            gpt-5-codex (reasoning none, summaries auto) │
│  Directory: [[workspace]]                                       │
│  Approval:         on-request                                   │
│  Sandbox:          read-only                                    │
│  Agents.md:        <none>                                       │
│                                                                 │
│  Context window:   100% left (750 used / 272K)                  │
│  Limits:           data not available yet                       │
╰─────────────────────────────────────────────────────────────────╯
